# federated-learning

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  client.py  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  server.py
client/: client.py  client_config.py
federated/: Dockerfile.client  Dockerfile.dashboard  Dockerfile.server  cfg.py  client.py  client_config.py  clustered_data.py  dashboard.py  dashboard_config.py  helpers.py  metrics.py  requirements.txt  server.py  server_config.py
federated-learning-workshop/: cfg.py  client.py  dashboard.py  helpers.py  metrics.json  server.py
part1/: Makefile  client.py  docker-compose.yml  helpers.py  server.py
part2/: Dockerfile.dashboard  Dockerfile.server  Makefile  client.py  dashboard.py  docker-compose.yml  helpers.py  metrics.json
server/: Dockerfile  makefile  server.py
server/certificates/: generate.sh
server_src/: Dockerfile  requirements.txt  server.py
server_src/certificates/: certificate.conf
solutions/exercise 1/: client.py  dockerfile  utils.py
solutions/exercise 2/: client.py  dockerfile  requirements.txt  utils.py
solutions/exercise 3/: client.py  dockerfile  utils.py
workshop-part2/client/: client.py
workshop-part2/server/: server.py
workshop/client/: client.py  dockerfile  requirements.txt  utils.py
workshop/exercise 1/: client.py  dockerfile  excercise 1.ipynb  utils.py
workshop/exercise 2/: client.py  dockerfile
workshop/exercise 3/: client.py  utils.py
workshop/exercises/: workshop_template.ipynb
workshop/server/: server.py
