[project]
name = "mlops-and-crafts-federated-learning"
version = "0.1.0"
authors = [
    {name = "Oege Dijk", email = "oege.dijk@thoughtworks.com"},
]
description = "Demonstration of federated learning with flower for MlOps and Crafts meetup"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "flwr==1.4.0",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
    "dash==2.9.3",
    "dash-bootstrap-components==1.4.1",
]
dev = [
    "black",
    "ruff",
    "pre-commit",
]
test = [
    "pytest",
]

[tool.ruff]
extend-ignore = ["E501", "E701"]